--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "cmdk": "^1.1.1",
+    "jose": "^6.1.0",
     "next": "16.0.1",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
