--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/qrcode": "^1.5.6",
     "cmdk": "^1.1.1",
     "jose": "^6.1.0",
     "next": "16.0.1",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
