--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/qrcode": "^1.5.6",
+    "@vercel/speed-insights": "^1.2.0",
     "cmdk": "^1.1.1",
     "jose": "^6.1.0",
     "next": "16.0.1",
