--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@types/qrcode": "^1.5.6",
     "@vercel/speed-insights": "^1.2.0",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "jose": "^6.1.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.1",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
